--- a/deployment.tex
+++ b/deployment.tex
@@ -1,4 +1,4 @@
-\section{Deployment Scenarios}
+\section{Motivating Scenarios}
 \label{s:deploy}
 \radhika{need a better title?}
 
@@ -27,6 +27,8 @@ Find citations
     \item other bundled traffic: we still get benefits.
     \item long-lived persistent connections: fall back to status quo.
 \end{itemize}
+\radhika{Also say something about placement of \inbox \outbox pairs.}
 
 \Para{Bottleneck is shared by the bundled traffic}
+
 \radhika{*/}
