--- a/packages.tex
+++ b/packages.tex
@@ -102,6 +102,7 @@
 %
 \newcommand{\paragrapha}[1]{\vspace{0.075in}\noindent{\bf #1.}}
 \newcommand{\paragraphi}[1]{\noindent\textit{#1.}}
+\newcommand{\paragraphn}[1]{\noindent\textit{#1}}
 \newcommand{\ct}[1]{{\texttt{#1}}}
 \newcommand{\Para}[1]{\paragrapha{#1}}
 \newcommand{\Sec}[1]{\S\ref{#1}}
