--- a/ref.bib
+++ b/ref.bib
@@ -1640,6 +1640,12 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
     howpublished = {\url{https://www.cisco.com/c/en/us/td/docs/switches/lan/catalyst4500/12-2/3-1-1SG/configuration/guide/config/qos.html}},
 }
 
+@misc{att-qos,
+    title = {{Which VPN? Applications for IPsec and MPLS}},
+    howpublished = {\url{https://www.business.att.com/content/dam/attbusiness/briefs/vpn-applications-product-brief.pdf}},
+    year = {2016}
+}
+
 @inproceedings {ups,
 author = {Radhika Mittal and Rachit Agarwal and Sylvia Ratnasamy and Scott Shenker},
 title = {Universal Packet Scheduling},
@@ -1647,3 +1653,16 @@ booktitle = {13th {USENIX} Symposium on Networked Systems Design and Implementat
 year = {2016},
 }
 
+@techreport{ipoptions,
+    author = {Rodrigo Fonseca and George Porter and Randy H. Katz and Scott Shenker and Ion Stoica},
+    title = {IP options are not an option},
+    institution = {UC Berkeley},
+    year = {2005}
+}
+
+@inproceedings{mboxbadness,
+ author = {Honda, Michio and Nishida, Yoshifumi and Raiciu, Costin and Greenhalgh, Adam and Handley, Mark and Tokuda, Hideyuki},
+ title = {Is It Still Possible to Extend TCP?},
+ booktitle = {Proceedings of the 2011 ACM SIGCOMM Conference on Internet Measurement Conference},
+ year = {2011},
+} 
