--- a/related.tex
+++ b/related.tex
@@ -4,9 +4,9 @@
 %With our work sitting at the intersection of highly popular topics of scheduling, congestion control and middleboxes, one can produce a large body of past work related to each topic. However, this unique intersection of topics is also what adds significant novelty to our work. 
 Our work sits at the unique intersection of three popular areas: scheduling, congestion control and middleboxes. We identify the most relevant related works in each of these areas below. 
 
-\Para{Enabling packet scheduling in wide-area networks} PIFO~\cite{pifo} is programmable scheduler that can be configured by the network operators to express different policies. Not only does it require a new router hardware, but it also suffers from the issue of limited visibility into customers' traffic to choose appropriate policies. UPS~\cite{ups} goes a step further by allowing different scheduling policies to be expressed from the edge via header initialization, 
+\Para{Enabling packet scheduling in wide-area networks} PIFO~\cite{pifo} is programmable scheduler that can be configured differently at the routers to express different policies. Not only does it require a new router hardware, but it also suffers from the issue of network operators having limited visibility into customers' traffic to choose appropriate policies, and limited incentives to enforce them. UPS~\cite{ups} goes a step further by allowing different scheduling policies to be expressed from the edge via header initialization. 
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
-but it also requires a new router hardware. \name, with its more tractable goals, provides a solution that is far easier to deploy. 
+However, it also requires new router hardware. \name, with its more tractable goals, provides a solution that is far easier to deploy, without requiring any cooperation from the carrier networks. 
 
 \Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} observes that majority of today's traffic is owned by a few entities.
 %, and that a single entity might have a large number of flows traversing the same bottleneck link. 
