--- a/ref.bib
+++ b/ref.bib
@@ -1655,14 +1655,14 @@ year = {2016},
 
 @techreport{ipoptions,
     author = {Rodrigo Fonseca and George Porter and Randy H. Katz and Scott Shenker and Ion Stoica},
-    title = {IP options are not an option},
+    title = {{IP options are not an option}},
     institution = {UC Berkeley},
     year = {2005}
 }
 
 @inproceedings{mboxbadness,
  author = {Honda, Michio and Nishida, Yoshifumi and Raiciu, Costin and Greenhalgh, Adam and Handley, Mark and Tokuda, Hideyuki},
- title = {Is It Still Possible to Extend TCP?},
- booktitle = {Proceedings of the 2011 ACM SIGCOMM Conference on Internet Measurement Conference},
+ title = {{Is It Still Possible to Extend TCP?}},
+ booktitle = {IMC},
  year = {2011},
 } 
