--- a/congestion-control.tex
+++ b/congestion-control.tex
@@ -1,7 +1,12 @@
 \begin{figure}
     \centering
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: sysfonts}}
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: showtextdb}}\end{kframe}
 \includegraphics[width=\maxwidth]{figure/eval:cc-1} 
 
 \end{knitrout}
